--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,13 +4,12 @@
         <div class="row">
             <div class="col-md-6">
                 <ul class="top-menu">
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Features</a></li>
+                    <li><a href="mailto:eevcode@gmail.com">eevcode@gmail.com</a></li>
                 </ul>
             </div>
             <div class="col-md-6 d-none d-sm-block">
                 <div class="social-icons social-icons-colored-hover">
-                    <ul>
+                    <!-- <ul>
                         <li class="social-facebook"><a href="#"><i class="fab fa-facebook-f"></i></a></li>
                         <li class="social-twitter"><a href="#"><i class="fab fa-twitter"></i></a></li>
                         <li class="social-google"><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
@@ -20,7 +19,7 @@
                         <li class="social-dribbble"><a href="#"><i class="fab fa-dribbble"></i></a></li>
                         <li class="social-youtube"><a href="#"><i class="fab fa-youtube"></i></a></li>
                         <li class="social-rss"><a href="#"><i class="fa fa-rss"></i></a></li>
-                    </ul>
+                    </ul> -->
                 </div>
             </div>
         </div>
