--- a/_includes/header.html
+++ b/_includes/header.html
@@ -48,7 +48,7 @@
                             <li><a href="index.html">Home</a></li>
                             <li class="dropdown"><a href="#">Apps</a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="layout-boxed.html">SIZOD GDZS Calculation</a></li>
+                                    <li><a href="https://eecode.ru/gdzs/policy.html">SIZOD GDZS Calculation</a></li>
                                 </ul>
                             </li>
                         </ul>
